[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "naipromptexplorer"
version = "0.1.0"
description = "Desktop application for browsing prompts embedded in PNG files."
readme = "README.md"
authors = [{name = "NAI Prompt Explorer"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
